[package]
name = "chord-action"
version = "0.1.20"
authors = ["bit-ranger <sincerebravefight@gmail.com>"]
edition = "2021"

description = "async parallel case executor"
homepage = "https://github.com/bit-ranger/chord"
readme = "README.md"
keywords = ["async", "parallel", "executor", "case", "test"]
categories = ["development-tools", "development-tools::testing", "development-tools::profiling"]
license = "MIT/Apache-2.0"
repository = "https://github.com/bit-ranger/chord"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chord-core = { path = "../core", version = "0.1.20" }
chord-util = { path = "../util", version = "0.1.20", optional = true }
serde = { version = "1.0" }
itertools = "0.10.1"
futures = { version = "0.3.13" }
log = { version = "0.4.14", features = ["std"] }
reqwest = { version = "0.11.8", features = ['stream'], optional = true }
md5 = { version = "0.7.0", optional = true }
redis = { version = "0.20.0", features = ["tokio-comp"], optional = true }
rbatis = { version = "3.1.12", optional = true, default-features = false, features = ["default_mode", "all-database", "upper_case_sql_keyword", "runtime-tokio-rustls"] }
mongodb = { version = "2.2.2", default-features = false, features = ["tokio-runtime"], optional = true }
urlencoding = { version = "1.3.3", optional = true }
dynamic_reload = { version = "0.4.0", optional = true }
rlua = { version = "0.17.0", optional = true }
rlua_serde = { version = "0.4", optional = true }
dirs = "4.0.0"


[features]
default = []
act_restapi = ["reqwest"]
act_database = ["rbatis"]
act_dubbo = []
act_redis = ["redis"]
act_crypto = ["md5"]
act_mongodb = ["mongodb"]
act_url = ["urlencoding"]
act_cdylib = ["dynamic_reload"]
act_docker = ["chord-util"]
act_lua = ["rlua", "rlua_serde"]
act_shell = []
act_program = []


