[package]
name = "chord-action"
version = "0.1.22"
authors = ["bit-ranger <sincerebravefight@gmail.com>"]
edition = "2021"

description = "async parallel case executor"
homepage = "https://github.com/bit-ranger/chord"
readme = "README.md"
keywords = ["async", "parallel", "executor", "case", "test"]
categories = ["development-tools", "development-tools::testing", "development-tools::profiling"]
license = "MIT/Apache-2.0"
repository = "https://github.com/bit-ranger/chord"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chord-core = { path = "../core", version = "0.1.22" }
chord-util = { path = "../util", version = "0.1.22", optional = true }
serde = { version = "1.0" }
itertools = "0.10.5"
futures = { version = "0.3.25" }
log = { version = "0.4.14", features = ["std"] }
reqwest = { version = "0.11.14", features = ['stream'], optional = true }
md5 = { version = "0.7.0", optional = true }
redis = { version = "0.22.3", features = ["tokio-comp"], optional = true }
rbatis = { version = "3.1.14", optional = true, default-features = false, features = ["default_mode", "all-database", "upper_case_sql_keyword", "runtime-tokio-rustls"] }
mongodb = { version = "2.3.1", default-features = false, features = ["tokio-runtime"], optional = true }
urlencoding = { version = "2.1.2", optional = true }
dynamic_reload = { version = "0.4.0", optional = true }
rlua = { version = "0.19.4", optional = true }
dirs = "4.0.0"
quickjs_runtime = { version = "0.8", optional = true }
hirofa_utils = { version = "0.5", optional = true }

[features]
default = []
act_restapi = ["reqwest"]
act_database = ["rbatis"]
act_dubbo = []
act_redis = ["redis"]
act_crypto = ["md5"]
act_mongodb = ["mongodb"]
act_url = ["urlencoding"]
act_cdylib = ["dynamic_reload"]
act_docker = ["chord-util"]
act_lua = ["rlua"]
act_shell = []
act_program = []
act_quickjs = ['quickjs_runtime', "hirofa_utils"]


