[package]
name = "chord"
version = "0.1.0"
authors = ["bit-ranger <sincerebravefight@gmail.com>"]
edition = "2021"

description = "async parallel case executor"
homepage = "https://github.com/bit-ranger/chord"
readme = "README.md"
keywords = ["async", "parallel", "executor", "case", "test"]
categories = ["test"]
license = "MIT/Apache-2.0"
repository = "https://github.com/bit-ranger/chord"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
chrono = {version = "0.4.19", features = ["serde"]}
anyhow = {version = "1.0.40", features = ["std", "backtrace"]}
async-trait = "0.1.50"
async-std = {version = "1.9.0", features = ["std", "attributes", "tokio1"]}
regex = "1.4.6"
lazy_static = "1.4.0"
itertools = "0.10.0"