[package]
name = "chord-cli"
version = "0.1.20"
authors = ["bit-ranger <sincerebravefight@gmail.com>"]
edition = "2021"

description = "async parallel case executor"
homepage = "https://github.com/bit-ranger/chord"
readme = "README.md"
keywords = ["async", "parallel", "executor", "case", "test"]
categories = ["development-tools", "development-tools::testing", "development-tools::profiling"]
license = "MIT/Apache-2.0"
repository = "https://github.com/bit-ranger/chord"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "chord"
path = "src/main.rs"

[dependencies]
chord-core = { path = "../core", version = "0.1.20" }
chord-flow = { path = "../flow", version = "0.1.20" }
chord-input = { path = "../input", version = "0.1.20" }
chord-output = { path = "../output", version = "0.1.20", features = ["report_csv", "report_webhook"] }
chord-action = { path = "../action", version = "0.1.20", features = ["act_restapi", "act_crypto", "act_dubbo", "act_redis", "act_database", "act_mongodb", "act_url", "act_cdylib", "act_docker", "act_lua", "act_program"] }
tokio = { version = "1.20", features = ["fs", "time", "tracing", "process", "macros", "rt", "io-util"] }
log = { version = "0.4.14", features = ["std"] }
time = "0.1.42"
futures = "0.3.13"
itertools = "0.10.0"
flume = "0.10.5"
structopt = "0.3"
dirs = "4.0.0"
async-recursion = "1.0.0"
colored = "2"
thiserror = "1.0"
