[package]
name = "chord-cmd"
version = "0.1.0"
authors = ["bit-ranger <sincerebravefight@gmail.com>"]
edition = "2018"

description = "async parallel case executor"
homepage = "https://github.com/bit-ranger/chord"
readme = "README.md"
keywords = ["async", "parallel", "executor", "case", "test"]
categories = ["test"]
license = "MIT/Apache-2.0"
repository = "https://github.com/bit-ranger/chord"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chord-flow = {path = "../flow"}
chord-common = {path = "../common"}
chord-input = {path = "../input"}
chord-output = {path = "../output", features = ["report_csv"]}
chord-step = {path = "../step", features = ["step_restapi", "step_md5", "step_dubbo", "step_redis", "step_mysql", "step_mongodb", "step_url_encode", "step_url_decode", "step_dynlib"]}
log = { version = "0.4.14", features = ["std"]}
async-std = {version = "1.9.0", features = ["std", "attributes", "tokio1"]}
time = "0.1.42"
futures = "0.3.13"
itertools = "0.10.0"
flume = "0.10.5"
structopt = "0.3"
serde_yaml = "0.8"
