[package]
name = "chord-cmd"
version = "0.1.0"
authors = ["bit-ranger <sincerebravefight@gmail.com>"]
edition = "2018"

description = "async parallel case executor"
homepage = "https://github.com/bit-ranger/chord"
readme = "README.md"
keywords = ["async", "parallel", "executor", "case", "test"]
categories = ["test"]
license = "MIT/Apache-2.0"
repository = "https://github.com/bit-ranger/chord"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chord = {path = "../chord" }
chord-flow = {path = "../flow"}
chord-input = {path = "../input"}
chord-output = { path = "../output", features = ["report_csv"] }
chord-action = { path = "../action", features = ["act_restapi", "act_crypto", "act_dubbo", "act_redis", "act_database", "act_mongodb", "act_url", "act_dylib", "act_docker", "act_python"] }
log = { version = "0.4.14", features = ["std"] }
async-std = {version = "1.9.0", features = ["std", "attributes", "tokio1"]}
time = "0.1.42"
futures = "0.3.13"
itertools = "0.10.0"
flume = "0.10.5"
structopt = "0.3"
serde_yaml = "0.8"
