[package]
name = "chord-core"
version = "0.1.21"
authors = ["bit-ranger <sincerebravefight@gmail.com>"]
edition = "2021"

description = "async parallel case executor"
homepage = "https://github.com/bit-ranger/chord"
readme = "README.md"
keywords = ["async", "parallel", "executor", "case", "test"]
categories = ["development-tools", "development-tools::testing", "development-tools::profiling"]
license = "MIT/Apache-2.0"
repository = "https://github.com/bit-ranger/chord"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.19", features = ["serde"] }
async-trait = "0.1.58"
regex = "1.6.0"
lazy_static = "1.4.0"
itertools = "0.10.5"
thiserror = "1.0"
tokio = { version = "1.21", features = ["fs", "time", "tracing", "process", "macros", "rt", "io-util", "sync"] }


[target.'cfg(linux)'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }