[package]
name = "exe"
version = "0.1.0"
authors = ["bit-ranger <sincerebravefight@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flow = {path = "../flow"}
point = {path = "../point"}
common = {path = "../common"}
log = { version = "0.4.14", features = ["std"]}
getopts = "0.2.21"
async-std = {version = "1.9.0", features = ["std", "attributes", "tokio1"]}
time = "0.1.42"