[package]
name = "chord-flow"
version = "0.1.0"
authors = ["bit-ranger <sincerebravefight@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chord-common = {path = "../common"}
itertools = "0.10.0"
serde = "1.0"
async-std = {version = "1.9.0", features = ["std", "attributes", "tokio1"]}
futures = "0.3.13"
handlebars = "3.5.3"
log = { version = "0.4.14", features = ["std"]}
chrono = "0.4.19"
