[package]
name = "chord-flow"
version = "0.1.22"
authors = ["bit-ranger <sincerebravefight@gmail.com>"]
edition = "2021"

description = "async parallel case executor"
homepage = "https://github.com/bit-ranger/chord"
readme = "README.md"
keywords = ["async", "parallel", "executor", "case", "test"]
categories = ["development-tools", "development-tools::testing", "development-tools::profiling"]
license = "MIT/Apache-2.0"
repository = "https://github.com/bit-ranger/chord"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chord-core = { path = "../core", version = "0.1.22" }
itertools = "0.12.1"
futures = "0.3.27"
handlebars = "4.3.6"
log = { version = "0.4.14", features = ["std"] }
tracing = "0.1"
chrono = "0.4.26"
lazy_static = "1.4.0"
jsonpath-rust = "0.3.0"
thiserror = "1.0"