[package]
name = "chord-input"
version = "0.1.22"
authors = ["bit-ranger <sincerebravefight@gmail.com>"]
edition = "2021"


description = "async parallel case executor"
homepage = "https://github.com/bit-ranger/chord"
readme = "README.md"
keywords = ["async", "parallel", "executor", "case", "test"]
categories = ["development-tools", "development-tools::testing", "development-tools::profiling"]
license = "MIT/Apache-2.0"
repository = "https://github.com/bit-ranger/chord"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chord-core = { path = "../core", version = "0.1.22" }
csv = { version = "1.1.5" }
chrono = { version = "0.4.23", features = ["serde"] }
log = { version = "0.4.14", features = ["std"] }
hocon = { version = "0.9.0", features = [] }
thiserror = "1.0"