[package]
name = "chord-output"
version = "0.1.0"
authors = ["bit-ranger <sincerebravefight@gmail.com>"]
edition = "2018"

description = "async parallel case executor"
homepage = "https://github.com/bit-ranger/chord"
readme = "README.md"
keywords = ["async", "parallel", "executor", "case", "test"]
categories = ["test"]
license = "MIT/Apache-2.0"
repository = "https://github.com/bit-ranger/chord"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chord = {path = "../chord" }
serde = {version = "1.0"}
async-std = {version = "1.9.0", features = ["std", "attributes", "tokio1"]}
csv = { version = "1.1.5"}
chrono = {version = "0.4.19", features = ["serde"]}
itertools = {version = "0.10.0"}
mongodb = { version = "2.0.0-alpha.1",  default-features = false, features = ["async-std-runtime"], optional = true }
surf = {version = "2.1.0",  optional = true}
log = { version = "0.4.14", features = ["std"]}

[features]
default = []
report_mongodb = ["mongodb"]
report_csv = []
report_elasticsearch = ["surf"]