[package]
name = "chord-output"
version = "0.1.15"
authors = ["bit-ranger <sincerebravefight@gmail.com>"]
edition = "2021"

description = "async parallel case executor"
homepage = "https://github.com/bit-ranger/chord"
readme = "README.md"
keywords = ["async", "parallel", "executor", "case", "test"]
categories = ["development-tools", "development-tools::testing", "development-tools::profiling"]
license = "MIT/Apache-2.0"
repository = "https://github.com/bit-ranger/chord"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chord-core = { path = "../core", version = "0.1.15" }
serde = { version = "1.0" }
async-std = { version = "1.9.0", features = ["std", "attributes", "tokio1"] }
chrono = { version = "0.4.19", features = ["serde"] }
itertools = { version = "0.10.0" }
log = { version = "0.4.14", features = ["std"] }
async-trait = "0.1.50"
futures = "0.3.13"
csv = { version = "1.1.5", optional = true }
surf = { version = "2.1.0", optional = true }
thiserror = "1.0"

[features]
default = []
report_csv = ["csv"]
report_elasticsearch = ["surf"]
report_webhook = ["surf"]

