[package]
name = "point"
version = "0.1.0"
authors = ["bit-ranger <sincerebravefight@gmail.com>"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path = "../common"}
async-std = {version = "1.9.0", features = ["std", "attributes", "tokio1"]}
log = { version = "0.4.14", features = ["std"]}
surf = {version = "2.1.0",  optional = true}
md5 = {version = "0.7.0", optional = true }
redis = {version="0.20.0", features = [ "async-std-comp"], optional = true }
sqlx = { version = "0.5", features = [ "runtime-async-std-native-tls", "chrono", "mysql"], optional = true }


[target.'cfg(linux)'.dependencies]
openssl = {version = "0.10", features = ["vendored"]}



[features]
default = []
pt_mysql = ["sqlx"]
pt_dubbo = []
pt_redis = ["redis"]
pt_md5 = ["md5"]
pt_restapi = ["surf"]

