[package]
name = "chord-point"
version = "0.1.0"
authors = ["bit-ranger <sincerebravefight@gmail.com>"]
edition = "2018"

description = "async parallel case executor"
homepage = "https://github.com/bit-ranger/chord"
readme = "README.md"
keywords = ["async", "parallel", "executor", "case", "test"]
categories = ["test"]
license = "MIT/Apache-2.0"
repository = "https://github.com/bit-ranger/chord"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chord-common = {path = "../common"}
async-std = {version = "1.9.0", features = ["std", "attributes", "tokio1"]}
log = { version = "0.4.14", features = ["std"]}
surf = {version = "2.1.0",  optional = true}
md5 = {version = "0.7.0", optional = true }
redis = {version="0.20.0", features = [ "async-std-comp"], optional = true }
rbatis = { version = "1.8.81",  optional = true }
mongodb = { version = "2.0.0-alpha.1",  default-features = false, features = ["async-std-runtime"], optional = true }

[target.'cfg(linux)'.dependencies]
openssl = {version = "0.10", features = ["vendored"]}



[features]
default = []
pt_mysql = ["rbatis"]
pt_dubbo = []
pt_redis = ["redis"]
pt_md5 = ["md5"]
pt_jsonapi = ["surf"]
pt_mongodb = ["mongodb"]

