[package]
name = "chord-port"
version = "0.1.0"
authors = ["bit-ranger <sincerebravefight@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chord-common = {path = "../common"}
async-std = {version = "1.9.0", features = ["std", "attributes", "tokio1"]}
csv = "1.1.5"
serde_yaml = "0.8"
