[package]
name = "chord-port"
version = "0.1.0"
authors = ["bit-ranger <sincerebravefight@gmail.com>"]
edition = "2018"

description = "async parallel case executor"
homepage = "https://github.com/bit-ranger/chord"
readme = "README.md"
keywords = ["async", "parallel", "executor", "case", "test"]
categories = ["test"]
license = "MIT/Apache-2.0"
repository = "https://github.com/bit-ranger/chord"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chord-common = {path = "../common"}
async-std = {version = "1.9.0", features = ["std", "attributes", "tokio1"]}
serde_yaml = "0.8"
csv = { version = "1.1.5", optional = true}
rbatis = { version = "1.8.81",  optional = true }


[features]
default = []
report_mysql = ["rbatis"]
report_csv = ["csv"]