[package]
name = "chord-util"
version = "0.1.0"
authors = ["bit-ranger <sincerebravefight@gmail.com>"]
edition = "2018"

description = "async parallel case executor"
homepage = "https://github.com/bit-ranger/chord"
readme = "README.md"
keywords = ["async", "parallel", "executor", "case", "test"]
categories = ["test"]
license = "MIT/Apache-2.0"
repository = "https://github.com/bit-ranger/chord"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chord = {path = "../chord" }
surf = { version = "2.1.0"}
async-std = {version = "1.9.0", features = ["std", "attributes", "tokio1"]}
futures = "0.3.13"
log = { version = "0.4.14", features = ["std"]}