[package]
name = "chord-util"
version = "0.1.17"
authors = ["bit-ranger <sincerebravefight@gmail.com>"]
edition = "2021"

description = "async parallel case executor"
homepage = "https://github.com/bit-ranger/chord"
readme = "README.md"
keywords = ["async", "parallel", "executor", "case", "test"]
categories = ["development-tools", "development-tools::testing", "development-tools::profiling"]
license = "MIT/Apache-2.0"
repository = "https://github.com/bit-ranger/chord"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chord-core = { path = "../core", version = "0.1.17" }
serde = { version = "1.0" }
reqwest = { version = "0.11.8", features = ['stream'] }
async-std = { version = "1.9.0", features = ["std", "attributes", "tokio1"] }
futures = "0.3.13"
log = { version = "0.4.14", features = ["std"] }
thiserror = "1.0"