[package]
name = "chord-web"
version = "0.1.22"
authors = ["bit-ranger <sincerebravefight@gmail.com>"]
edition = "2021"

description = "async parallel case executor"
homepage = "https://github.com/bit-ranger/chord"
readme = "README.md"
keywords = ["async", "parallel", "executor", "case", "test"]
categories = ["development-tools", "development-tools::testing", "development-tools::profiling"]
license = "MIT/Apache-2.0"
repository = "https://github.com/bit-ranger/chord"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "chord-web"
path = "src/main.rs"

[dependencies]
chord-core = { path = "../core", version = "0.1.22" }
chord-input = { path = "../input", version = "0.1.22" }
chord-util = { path = "../util", version = "0.1.22" }
tokio = { version = "1.23", features = ["fs", "time", "tracing", "process", "macros"] }
serde = { version = "1.0" }
futures = "0.3.25"
itertools = "0.10.5"
log = { version = "0.4.14", features = ["std"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.16", features = ['env-filter'] }
tracing-appender = "0.2"
flume = "0.10.14"
actix-web = "4.2.1"
validator = { version = "0.16", features = ["derive"] }
lazy_static = "1.4.0"
url = "2.3.1"
regex = "1.7.0"
structopt = "0.3"
async-trait = "0.1.58"
bean = "0.1.4"
dirs = "4.0.0"
thiserror = "1.0"
chrono = { version = "0.4.23", features = ["serde"] }