[package]
name = "chord-step-dylib"
version = "0.1.0"
authors = ["bit-ranger <sincerebravefight@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chord-common = {path = "../../common" }
lazy_static = "1.4.0"

[lib]
name = "step_dylib"
crate-type = ["dylib"]