[package]
name = "chord-step-dyn"
version = "0.1.0"
authors = ["bit-ranger <sincerebravefight@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chord-common = {path = "../../common" }
async-std = {version = "1.9.0", features = ["std", "attributes", "tokio1"]}

[lib]
name = "step_dyn"
crate-type = ["dylib"]