[package]
name = "chord-action-dylib-example"
version = "0.1.0"
authors = ["bit-ranger <sincerebravefight@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chord = { path = "../../../chord" }

[lib]
name = "chord_action_dylib_example"
crate-type = ["dylib"]